<resources>
    <string name="app_name">VistaApp2.0</string>
    <string name="home">Home</string>
    <string name="optometrista">Optometrista</string>
    <string name="asesor">Asesor</string>
    <string name="paciente">Paciente</string>
    <string name="generar_cita">Cita</string>
    <string name="receta">Receta</string>
    <string name="cotizaciones">Cotizaciones</string>
    <string name="productos">Productos</string>
    <string name="salir">Salir</string>
    <string name="agregar">Agregar</string>
    <string name="buscar">Buscar</string>
    <string name="eliminar">Eliminar</string>
    <string name="actualizar">Actualizar</string>
    <string name="carrucel">Carrucel</string>
    <string name="precio_aro">Precio Aro</string>
</resources>